fix(ui): alignment in header (#766)

--- a/apps/beeai-ui/src/components/AppHeader/AppHeader.module.scss
+++ b/apps/beeai-ui/src/components/AppHeader/AppHeader.module.scss
@@ -28,9 +28,6 @@
   column-gap: $gap;
   align-items: center;
   block-size: rem(56px);
-  > :last-child {
-    text-align: end;
-  }
 
   &.hasNav {
     grid-template-columns: auto 1fr;
@@ -40,4 +37,8 @@
 .agentName {
   font-size: rem(14px);
   line-height: math.div(20, 14);
+}
+
+.agentDetailButtonContainer {
+  text-align: end;
 }
